# BasicAzureApimMCP

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/prompts/: list-all-pets.prompt.md
prompts/: create_issues.md
src/: __init__.py
src/basic_mcp/: __init__.py  server.py
src/basic_mcp/tools/: __init__.py  sum_tool.py
tests/: test_sum_integration.py  test_sum_tool.py
